F1.4.T3: orch auto-commit (#63)
